--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://jullyanabrasileiro:XL3FhFzdoJHB9xFw@cluster0.qbjlm.mongodb.net/twitter-clone?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
