--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://jullyanabrasileiro:XL3FhFzdoJHB9xFw@cluster0.qbjlm.mongodb.net/twitter-clone?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=2EwwKvqqJZyQFVMuhiYH8Dp7O0SzlWkSnTik9Y1XyAA=
+NODE_ENV=development
