--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MONGO_URI=mongodb+srv://jullyanabrasileiro:XL3FhFzdoJHB9xFw@cluster0.qbjlm.mongo
 PORT=5000
 JWT_SECRET=2EwwKvqqJZyQFVMuhiYH8Dp7O0SzlWkSnTik9Y1XyAA=
 NODE_ENV=development
+
+CLOUDINARY_CLOUD_NAME=dqhro28ig
+CLOUDINARY_API_KEY=492996243557332
+CLOUDINARY_API_SECRET=_AQutuq2qnnGy2xavG454czQXQw
